# agentic-odoo-build

./: .env.example  .gitignore  .gitmodules  .merge_body.json  .pr_body.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Listed directory Agentic_odoo_build.txt  Makefile  README.md  STATE.md  TODO.html  devops_evaluation_report.md  kickoff-odoo-ai-brain.html  llm-test-suite.html
.github/: CODEOWNERS  pr-body-rollback.md
docs/: ARCHITECTURE.md  EVALUATIONS.md  PROMPTS.md  RUNBOOK.md  TOOL_REGISTRY.md  USER_GUIDE.md
infra/: docker-compose.yml  redaction.yaml
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: config.py  main.py
orchestrator/app/api/: admin.py  chat.py  gate.py  tools.py
orchestrator/app/middleware/: cost_control.py
orchestrator/app/security/: jwt.py  redaction.py
orchestrator/eval/: runner.py
orchestrator/eval/tasks/: task_001_liveness.py  task_002_routing.py  task_003_llm_echo.py  task_004_litellm_models.py  task_005_multiturn_cloud.py  task_006_ollama_echo.py  task_007_vkey_accepted.py  task_008_vkey_rejected.py  task_009_llm_openai_via_litellm.py  task_010_llm_openai_no_bypass.py  task_011_llm_openai_invalid_vkey.py  task_012_llm_openai_non_admin_read.py  task_013_litellm_vkey_scoped_to_github_dev.py  task_aml_check.py  task_dashboard_load.py  task_finance_report.py  task_narrative_quality.py  task_reconciliation_suggest.py
orchestrator/tests/: test_admin_usage.py  test_chat_gate.py  test_chat_jwt.py  test_e2e.py  test_health.py  test_litellm_routing.py  test_production_guard.py  test_routing.py  test_tools_api.py
(+68 files in other folders)
